--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,9 +1,10 @@
 article {
   display: inline-block;
-  width: 370px;
+  width: 100%;
+  height: 100%;
   transition: box-shadow 0.2s ease;
   margin: 40px 10px 0 10px;
-  background-color: #fff;
+  background-color: #fff; 
   border-radius: 5px;
   cursor: pointer;
 }
